feat(backend): revisión técnica seguridad tests y corrección de dependencias